--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
   http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.josephcrawley</groupId>
-  <artifactId>spitfire-subset</artifactId>
-  <name>Spitfire Subset Compiler</name>
+  <groupId>xlg.cs.lmu.edu</groupId>
+  <artifactId>manatee-subset</artifactId>
+  <name>Manatee Subset Compiler</name>
   <version>1.0</version>
 
   <dependencies>
