--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>xlg.cs.lmu.edu</groupId>
-  <artifactId>manatee-subset</artifactId>
-  <name>Manatee Subset Compiler</name>
+  <artifactId>spitfire</artifactId>
+  <name>Spitfire Compiler</name>
   <version>1.0</version>
 
   <dependencies>
@@ -18,7 +18,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.8.2</version>
+      <version>4.10</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
